# traveling-salesmen

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  requirements.txt  wallet.db
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  session.py
backend/app/flights/: airport_info.py  amadeus_client.py  live_status.py  on_time_lookup.py  regions.py  scoring.py  serpapi_client.py
backend/app/hotels/: serpapi_client.py
backend/app/llm/: agent_runner.py  anthropic_provider.py  orchestrator.py  prompts.py  provider.py  qwen_provider.py  tools.py
backend/app/routers/: chat.py  wallet.py
backend/app/schemas/: chat.py  flight.py  hotel.py  intent.py  wallet.py
backend/tests/: test_agent_runner.py  test_amadeus_client.py  test_chat_api.py  test_config.py  test_contracts.py  test_provider.py  test_regions.py  test_schemas.py  test_scoring.py  test_serpapi_client.py  test_session.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  INTENT_SCHEMA.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: generate-airport-coordinates.cjs
frontend/src/: App.jsx  api.js
frontend/src/components/: ChatWindow.jsx  DestinationRegionMap.jsx  FlightCard.jsx  HotelCard.jsx  HotelsSection.jsx  MessageBubble.jsx  PlanCard.jsx  PlansSection.jsx  RequirementsStrip.jsx  TripPlannerLayout.jsx  TripSection.jsx
frontend/src/data/airport_coordinates/: airportCoordinates.js
